.provarCaches/00D6C0000000xA6UAI/objects/sked__Resource_Override__c.object
<CustomObject>
    <fields>
        <fullName>sked__Description__c</fullName>
        <description>Optional reason for the overrides</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__End__c</fullName>
        <description>End date for when these overrides apply</description>
        <label>End</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__GeoLocation__c</fullName>
        <description>Optional geolocation of home address for the duration of the override</description>
        <label>GeoLocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>sked__Home_Address__c</fullName>
        <description>Optional home address for the duration of the override</description>
        <label>Home Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>sked__Resource__c</referenceTo>
        <relationshipLabel>Resource Overrides</relationshipLabel>
        <relationshipName>Resource_Overrides</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Start__c</fullName>
        <description>Start date for when these overrides apply</description>
        <label>Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Resource Override</label>
    <nameField>
        <displayFormat>RO-{000}</displayFormat>
        <label>Resource Override Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>